# dataset-timekeeping-auditor

./: .gitignore  Dockerfile  README.md  candidate_datasets.yaml  datasets.yaml  opendlv_rec_workflow.md  pyproject.toml  requirements.txt  rubric.md
.github/workflows/: audit-candidate-docs.yml  audit-examples.yml  docker-build.yml  publish-curated-results.yml
candidate_docs/: README.md
candidate_docs/ar_table/: registry_note.md
candidate_docs/autoferry_sensor_fusion/: registry_note.md
candidate_docs/autoware_jkk_ouster_mcap/: registry_note.md
candidate_docs/cartographer_deutsches_museum/: registry_note.md
candidate_docs/hilti_slam_2021/: registry_note.md
candidate_docs/i2nav_robot/: registry_note.md
candidate_docs/icsens_visual_inertial_lidar/: registry_note.md
candidate_docs/kaist_vio/: registry_note.md
candidate_docs/koide_lidar_imu_mapping/: registry_note.md
candidate_docs/m2dgr/: registry_note.md
candidate_docs/mit_marine_perception_robowhaler/: registry_note.md
docs/: candidate_datasets.md  github_actions.md  smoke_tests.md
examples/: example_dataset_readme.txt  example_opendlv_export.csv
results/: example_docs.json  example_opendlv.json  timing_summary.csv  timing_summary.md  timing_summary.tex
scripts/: audit_candidate_docs.sh  fetch_candidate_docs.py  generate_smoke_datasets.py  run_example_audits.sh  run_smoke_audits.sh  seed_candidate_docs_from_registry.py  summarize_curated_results.sh
smoke/: manifest.json
tables/: candidate_docs_summary.csv  candidate_docs_summary.md  candidate_docs_summary.tex
(+63 files in other folders)
